--- a/GlassScan/res/xml/voice_trigger.xml
+++ b/GlassScan/res/xml/voice_trigger.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <trigger keyword="@string/glass_scan" >
-
-     <constraints
-        camera="true"
-        network="true" />
-
+     <constraints camera="true" network="true" />
 </trigger>
