--- a/GlassScan/res/layout/activity_camera.xml
+++ b/GlassScan/res/layout/activity_camera.xml
@@ -7,5 +7,14 @@
         android:id="@+id/preview_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    
+    <TextView android:id="@+id/textview" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/label_capture"
+        android:singleLine="false"
+        android:layout_alignParentBottom="true"
+        android:textStyle="bold" />
 
 </RelativeLayout>
