--- a/GlassScan/res/layout/activity_camera.xml
+++ b/GlassScan/res/layout/activity_camera.xml
@@ -6,7 +6,8 @@
     <SurfaceView
         android:id="@+id/preview_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:keepScreenOn="true" />
     
     <TextView android:id="@+id/textview" 
         android:layout_width="wrap_content"
