go back to previous activity state on swap down, custom loading bar

--- a/GlassScan/res/xml/voice_trigger.xml
+++ b/GlassScan/res/xml/voice_trigger.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<trigger keyword="@string/glass_scan" >
+<trigger keyword="@string/edu_scan" >
      <constraints camera="true" network="true" />
 </trigger>
