--- a/GlassScan/res/layout/activity_main.xml
+++ b/GlassScan/res/layout/activity_main.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.eduglasses.glassscan.LaunchActivity"
+    tools:context="com.eduglasses.eduscan.LaunchActivity"
     tools:ignore="MergeRootFrame" />
