Package name , application name, remaned

--- a/GlassScan/res/layout/activity_main_layout_share.xml
+++ b/GlassScan/res/layout/activity_main_layout_share.xml
@@ -20,7 +20,7 @@
             android:id="@+id/imageview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@string/edu_scan"
+            android:contentDescription="@string/app_name"
             android:scaleType="fitXY" />
 
         <LinearLayout
