--- a/GlassScan/res/xml/voice_trigger.xml
+++ b/GlassScan/res/xml/voice_trigger.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<trigger keyword="@string/edu_scan" >
+<trigger keyword="@string/app_name" >
      <constraints camera="true" network="true" />
 </trigger>
