--- a/GlassScan/res/layout/activity_share.xml
+++ b/GlassScan/res/layout/activity_share.xml
@@ -6,7 +6,7 @@
     <ImageView android:id="@+id/imageview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/edu_scan"
+        android:contentDescription="@string/app_name"
         android:scaleType="fitXY" />
     
     <TextView android:id="@+id/textview" 
